# mcpkg

./: CMakeLists.txt  main.cpp
mcpkg/: dependencies.cpp  dependencies.h  package.cpp  package.h  result.h  version.cpp  version.h
mcpkg/utils/: database.cpp  database.h  result.h  version.cpp  version.h
